fixed #12; design issues, with new compatibles of using it on mobile

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -37,3 +37,7 @@ button,
     display: grid;
   }
 }
+
+@media(max-width: 700px){
+
+}
